# OpenTC

./: CMakeLists.txt  LICENSE  README.md
src/: OpenTC.c  OpenTC.h
